mcp/github/routes/github-mcp-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-github
  namespace: agentgateway-system
  labels:
    example: github-mcp-route
spec:
  parentRefs:
  - name: mcp-gateway-proxy
    namespace: agentgateway-system
    sectionName: mcp-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mcp-github
      backendRefs:
      - name: github-mcp-backend
        group: agentgateway.dev
        kind: AgentgatewayBackend
